--- a/my-app/tarc-003/src/App.css
+++ b/my-app/tarc-003/src/App.css
@@ -50,8 +50,7 @@ body {
 
 /* Hero Section */
 .hero-section {
-  background-color: #1f1f1f;
-  height: 100vh; 
+  background-color: #1f1f1f; 
   display: flex;
   justify-content: center;
   color: white;
@@ -88,3 +87,14 @@ body {
 }
 
 
+.services-section{
+  background-color:#1f1f1f;
+  display: flex;
+}
+
+.service-text{
+  color: aliceblue;
+  border: 10px solid #6db750;
+  border-radius: 15px;
+  padding: 15px;
+}
